2005-10-17  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-utils.c:
	(_gnome_vfs_uri_resolve_all_symlinks_uri):
	Correctly resolve nested symlinks without accessing invalid memory.
	Fixes #318457.

2005-10-17  Alexander Larsson  <alexl@redhat.com>

	* test/Makefile.am:
	* test/test-parse-ls-lga.c:
	Add ls parser test from #163671

2005-10-11  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c:
	(gnome_vfs_read_cancellable): Make sure bytes_read is set to 0 when
	the read returns an error (fixes possible problems using gnomevfs-cat
	with methods that don't set *bytes_read to 0 when an error
	occurs)

2005-10-12  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* programs/gnomevfs-ls.c: (show_data), (list), (main):
	Add the ability to list more than one directory, really
	test dir_close()

2005-10-05  Edward Hervey  <edward@fluendo.com>

	* configure.in: (HAVE_SAMBA_OLD_CLOSE):
	* modules/smb-method.c:
	Added correct handling of the renaming of the close function pointer in samba's
	libsmbclient.h (close --> close_fn)

2005-10-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.13.1. Further 2.12.x work is on gnome-2-12 branch.

=== gnome-vfs 2.12.1 ===
	
2005-10-03  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for 2.12.1.

2005-09-30  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(_gnome_vfs_mime_sniff_buffer_get):
	Fix mime sniffing being broken for small file, due to change in
	EOF behaviour in 2005-09-07 change.

2005-09-29  Tor Lillqvist  <tml@novell.com>

	* libgnomevfs/gnome-vfs-configuration.c
	* libgnomevfs/gnome-vfs-method.c: Include
	gnome-vfs-private-utils.h on Win32 to get the redefinitions of
	GNOME_VFS_SYSCONFDIR and GNOME_VFS_LIBDIR so that we don't have
	compile-time pathnames in the binary, and install-anywhere
	actually works.
