@@ -30,6 +30,7 @@
 #define __XDG_MIME_H__
 
 #include <stdlib.h>
+#include <sys/stat.h>
 
 #ifdef __cplusplus
 extern "C" {
@@ -68,7 +69,8 @@ extern const char *xdg_mime_type_unknown;
 
 const char  *xdg_mime_get_mime_type_for_data       (const void *data,
 						    size_t      len);
-const char  *xdg_mime_get_mime_type_for_file       (const char *file_name);
+const char  *xdg_mime_get_mime_type_for_file       (const char *file_name,
+                                                    struct stat *statbuf);
 const char  *xdg_mime_get_mime_type_from_file_name (const char *file_name);
 int          xdg_mime_is_valid_mime_type           (const char *mime_type);
 int          xdg_mime_mime_type_equal              (const char *mime_a,
